--- a/package.json
+++ b/package.json
@@ -1,36 +1,31 @@
 {
-  "name": "flux-pricing",
-  "version": "0.0.1",
-  "description": "Pricing component with flux",
-  "main": "js/app.js",
+  "name": "webpack-project",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "dev": "webpack-dev-server --inline --hot",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {},
   "dependencies": {
+    "babel-core": "^6.14.0",
+    "babel-loader": "^6.2.5",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-react-html-attrs": "^2.0.0",
+    "babel-plugin-transform-class-properties": "^6.11.5",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-preset-es2015": "^6.14.0",
+    "babel-preset-react": "^6.11.1",
+    "babel-preset-stage-0": "^6.5.0",
     "flux": "^2.0.0",
     "keymirror": "^0.1.1",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
-    "uglifyjs": "^2.4.10",
-    "underscore": "^1.8.3"
-  },
-  "devDependencies": {
-    "browserify": "~13.1.0",
-    "envify": "~3.4.1",
-    "react": "^15.3.0",
-    "reactify": "^1.1",
-    "watchify": "~3.7.0"
-  },
-  "scripts": {
-    "start": "watchify -o js/bundle.js -v -d .",
-    "build": "browserify . | uglifyjs -cm > js/bundle.min.js",
-    "test": "jest"
-  },
-  "author": "Ken Wheeler",
-  "contributors": [
-    "vichu1988"
-  ],
-  "browserify": {
-    "transform": [
-      "reactify",
-      "envify"
-    ]
+    "react-router": "^2.8.0",
+    "underscore": "^1.8.3",
+    "webpack": "^1.13.2"
   }
 }
